# Kairon

./: .gitignore  .gitmodules  CMAKE_BUILD.md  CMAKE_CLION.md  CMakeLists.txt  DEBUG_IMGUI.md  MIGRATION_SUMMARY.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  conandata.yml
DotEngine/: CMakeLists.txt
DotEngine/src/: DotEngine.h  detpch.cpp  detpch.h
DotEngine/src/DotEngine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Window.h
DotEngine/src/DotEngine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
DotEngine/src/DotEngine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
DotEngine/src/DotEngine/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
DotEngine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h
DotEngine/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Kairon/: CMakeLists.txt
Kairon/src/Kairon/: Core.h  EntryPoint.h
Kairon/src/Kairon/Events/: Event.h
Kairon/src/Platform/OpenGL/: OpenGLContext.cpp
Kairon/src/Platform/Windows/: WindowsWindow.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: SandBoxApp.cpp
scripts/: fix-imgui-submodule.bat  fix-imgui-submodule.sh  setup-imgui.bat  setup-imgui.sh
